cluster_install/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    # traefik.ingress.kubernetes.io/router.tls.certresolver: default
    # traefik.ingress.kubernetes.io/router.entrypoints: websecure
    # traefik.ingress.kubernetes.io/router.tls: 'true'
  name: minimal-ingress
spec:
  # tls:
  #  - secretName: test-tls
  rules:
    - host: mongo.spycehub.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongo-express-service
                port:
                  number: 8081
    - host: flower.spycehub.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flower-service
                port:
                  number: 5555
    - host: registry.spycehub.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry-service
                port:
                  number: 5000
    - host: api.spycehub.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 8000
